fix: quantity input field too small which triggers browsers' auto-zoom

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -39,7 +39,9 @@ form {
   text-align: center;
   border: 1px solid rgb(185, 185, 185);
   border-radius: 6px;
-  height: 24px;
+  font-size: 16px;
+  line-height: 1.3; /* keeps it balanced */
+  box-sizing: border-box;
 }
 
 .controls .btn-container {
